--- a/KimonoApp/formality.html
+++ b/KimonoApp/formality.html
@@ -45,12 +45,14 @@
     <h1>FORMALITY</h1>
     <div id="formality-container" class="container-fluid">
       <div class="row row-eq-height">
-          <div class="col-xs-3"></div>
-          <div id="formal-card" class="formality col-xs-3 formality-card" onClick="SetBuilderValue('Formality', 'Formal')">
-              <p class="formality-btn text-center">FORMAL</p>
+          <div class="col-xs-3 card-holder"></div>
+          <div id="formal-card" class="formality col-xs-3 card" onClick="SetBuilderValue('Formality', 'Formal')">
+              <img class="scene-icon img-responsive" src="Images/General/formal_icon.png" />
+              <p class="text-center scene-label">FORMAL</p>
           </div>
-          <div id="semiformal-card" class="formality col-xs-3 formality-card" onClick="SetBuilderValue('Formality', 'SemiFormal')">
-              <p class="formality-btn text-center">SEMI FORMAL</p>
+          <div id="semiformal-card" class="formality col-xs-3 card" onClick="SetBuilderValue('Formality', 'SemiFormal')">
+              <img class="scene-icon img-responsive" src="Images/General/semi_formal_icon.png" />
+              <p class="text-center scene-label">SEMI FORMAL</p>
           </div> 
       </div>
     </div>
