--- a/KimonoApp/material.html
+++ b/KimonoApp/material.html
@@ -80,7 +80,7 @@
             <p id="material-alert"></p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn end-btn" data-dismiss="modal">CLOSE</button>
           </div>
         </div>
       </div>
@@ -91,15 +91,14 @@
           <div class="modal-content">
             <div class="modal-header correct">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Choose Kimono</h4>
+              <h4 class="modal-title">CHOOSE KIMONO</h4>
             </div>
             <div class="modal-body">
                 <h4>KIMONO KITSUKE</h4>
                 <p>
                     You are wearing a <i>nagajuban.</i> The white <i>nagajuban</i> worn under your kimono is the first layer 
                     worn over top of your slip and undershirt (<i>juban</i>). The <i>nagajuban</i> is a long kimono-shaped robe
-                    that prevents the delicate Kimono from touching your skin. Only the white collar of the <i>nagajuban</i> remains 
-                    visible while wearing Kimono.
+                    that prevents the delicate Kimono from touching your skin.
                 </p>
                 <h4>KIMONO MATERIAL</h4>
                 <p>
@@ -107,7 +106,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert('Material');">Let's go!</button>
+              <button type="button" class="btn end-btn" data-dismiss="modal" onClick="TurnOffRulesAlert('Material');">LET'S GO!</button>
             </div>
           </div>
         </div>
