--- a/KimonoApp/pattern.html
+++ b/KimonoApp/pattern.html
@@ -72,7 +72,7 @@
               <div class="row">
                   <div class="col-xs-1"></div>
                   <img id="Iris-coll" class="pattern col-xs-2" src="./Images/General/iris_icon.png"></img>
-                  <img id="LongGrass-coll" class="pattern col-xs-2" src="./Images/General/longgrass_icon.png"></img>
+                  <img id="Susuki-coll" class="pattern col-xs-2" src="./Images/General/longgrass_icon.png"></img>
                   <img id="MapleLeaf-coll" class="pattern col-xs-2" src="./Images/General/mapleleaf_icon.png"></img>
                   <img id="MatsuPlumBamboo-coll" class="pattern col-xs-2" src="./Images/General/matsuplumbamboo_icon.png"></img>
                   <img id="Peony-coll" class="pattern col-xs-2" src="./Images/General/peony_icon.png"></img>
@@ -83,6 +83,7 @@
                   <img id="Matsu-coll" class="pattern col-xs-2" src="./Images/General/matsu_icon.png"></img>
                   <img id="Sakura-coll" class="pattern col-xs-2" src="./Images/General/sakura_icon.png"></img>
                   <img id="Tsubaki-coll" class="pattern col-xs-2" src="./Images/General/tsubaki_icon.png"></img> 
+                  <img id="GreenMapleLeaf-coll" class="pattern col-xs-2" src="./Images/General/green_maple_leaf_icon.png"></img>
               </div>
           </div>
         </div>
@@ -111,7 +112,7 @@
               <img id="Iris" class="pattern col-xs-4 img-responsive" src="./Images/General/iris_icon.png"></img>
           </div>
           <div class="row">
-              <img id="LongGrass" class="pattern col-xs-4 img-responsive" src="./Images/General/longgrass_icon.png"></img>
+              <img id="Susuki" class="pattern col-xs-4 img-responsive" src="./Images/General/longgrass_icon.png"></img>
               <img id="MapleLeaf" class="pattern col-xs-4 img-responsive" src="./Images/General/mapleleaf_icon.png"></img>
               <img id="Matsu" class="pattern col-xs-4 img-responsive" src="./Images/General/matsu_icon.png"></img>
           </div>
@@ -122,7 +123,8 @@
           </div>
           <div class="row">
               <img id="Sakura" class="pattern col-xs-4 img-responsive" src="./Images/General/sakura_icon.png"></img>
-              <img id="Tsubaki" class="pattern col-xs-4 img-responsive" src="./Images/General/tsubaki_icon.png"></img> 
+              <img id="Tsubaki" class="pattern col-xs-4 img-responsive" src="./Images/General/tsubaki_icon.png"></img>
+              <img id="GreenMapleLeaf" class="pattern col-xs-4 img-responsive" src="./Images/General/green_maple_leaf_icon.png"></img> 
           </div>
       </div>
       </div>
@@ -157,8 +159,8 @@
               <p id="pattern-detail"></p>
             </div>
             <div class="modal-footer">
-              <button id="ChooseBtn" type="button" class="btn btn-primary" data-dismiss="modal">Choose</button>
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button id="ChooseBtn" type="button" class="btn end-btn" data-dismiss="modal">CHOOSE</button>
+              <button type="button" class="btn btn-default cancel-btn" data-dismiss="modal">CANCEL</button>
             </div>
           </div>
         </div>
@@ -169,7 +171,7 @@
             <div class="modal-content">
               <div class="modal-header correct">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Kimono Pattern</h4>
+                <h4 class="modal-title">KIMONO PATTERN</h4>
               </div>
               <div class="modal-body">
                   <h4>PATTERN</h4>
@@ -180,7 +182,7 @@
                   </p>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert('Pattern');">Let's go!</button>
+                <button type="button" class="btn end-btn" data-dismiss="modal" onClick="TurnOffRulesAlert('Pattern');">LET'S GO!</button>
               </div>
             </div>
           </div>
