--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -46,7 +46,7 @@
     <h1>SEASON</h1>
     <div id="season-container" class="container-fluid">
         <div class="row row-eq-height">
-            <div class="col-xs-2"></div>
+            <div class="col-xs-2 card-holder"></div>
             <div id="spring-card" class="season col-xs-2 card" onClick="SetBuilderValue('Season', 'Spring')">
                 <img class="scene-icon img-responsive" src="Images/General/spring_icon.png" />
                 <p class="text-center scene-label">SPRING</p>
@@ -78,7 +78,7 @@
           <div class="modal-content">
             <div class="modal-header correct">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Gameplay Rules</h4>
+              <h4 class="modal-title">GAMEPLAY RULES</h4>
             </div>
             <div class="modal-body">
                 <h4>SELECT YOUR SCENE</h4>
@@ -88,8 +88,7 @@
                 </p>
                 <h4>KIMONO KITSUKE</h4>
                 <p>
-                    Kitsuke is the art of wearing kimono by knowing which shape, colour, thickness, pattern
-                    and design is appropriate for every situation.
+                    Kitsuke is the art of wearing kimono by knowing which shape, colour, thickness, pattern and design is appropriate for any situation. 
                     You will need to choose the correct kimono fabric thickness, colour, obi, and pattern based 
                     on your scene selection.
                     Learn as you choose - follow the tips to learn how marriage status, season, and formality affect the type 
@@ -97,7 +96,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert('Season');">Let's go!</button>
+              <button type="button" class="btn end-btn" data-dismiss="modal" onClick="TurnOffRulesAlert('Season');">LET'S GO!</button>
             </div>
           </div>
         </div>
