--- a/KimonoApp/marital.html
+++ b/KimonoApp/marital.html
@@ -45,7 +45,7 @@
     <h1>MARITAL STATUS</h1>
     <div id="marital-container" class="container-fluid">
       <div class="row row-eq-height">
-        <div class="col-xs-3"></div>
+        <div class="col-xs-3 card-holder"></div>
           <div id="married-card" class="marital col-xs-3 card" onClick="SetBuilderValue('Marital', 'Married')">
               <img class="scene-icon img-responsive" src="Images/General/short_sleeve_icon.png" />
               <p class="text-center scene-label">MARRIED</p>
