--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -112,7 +112,7 @@
             <p id="obi-alert"></p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn end-btn" data-dismiss="modal">CLOSE</button>
           </div>
         </div>
       </div>
@@ -123,7 +123,7 @@
           <div class="modal-content">
             <div class="modal-header correct">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">Choose Obi</h4>
+              <h4 class="modal-title">CHOOSE OBI</h4>
             </div>
             <div class="modal-body">
                 <h4>OBI</h4>
@@ -135,7 +135,7 @@
                 </p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal" onClick="TurnOffRulesAlert('Obi');">Let's go!</button>
+              <button type="button" class="btn end-btn" data-dismiss="modal" onClick="TurnOffRulesAlert('Obi');">LET'S GO!</button>
             </div>
           </div>
         </div>
