* Added April 9th edits to project for testing

--- a/KimonoApp/final.html
+++ b/KimonoApp/final.html
@@ -63,19 +63,23 @@
         <div class="modal-content">
           <div class="modal-header correct">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Nikkei National Museum & Cultural Centre would like to thank: </h4>
+            <h4 class="modal-title">Acknowledgements</h4>
           </div>
           <div class="modal-body text-left">
             <ul class="list-unstyled credits">
-              <li>BC Multiculturalism</li>
+              <li><strong>The Government of British Columbia</strong></li>
               <li><strong>Project & Content Management:</strong> Karah Goshinmon</li>
               <li><strong>Developer:</strong> <a target="_blank" href="https://czmoodydev.github.io">Curtis Zim Moody</a></li>
               <li><strong>Graphics:</strong> <a target="_blank" href="https://www.daniellejette.com/">Danielle Jette</a></li>
               <li><strong>Content Development Assistant:</strong> Rachelle Cheung</li>
-              <li>Content from the Kimono Culture Exhibit produced by Guest Curator Hitomi </li>
-              <li>Special thanks to Yoko Matsuno & Kaori Lytton</li>
-              <li>Nikkei National Museum & Cultural Centre: Sherri Kajiwara, Carolyn Nakagawa, Noriko Muraoka</li>
+              <li><strong>Content from the Kimono Culture Exhibit produced by:</strong> Guest Curator Hitomi Harama</li>
+              <li><strong>Special thanks to:</strong> Yoko Matsuno and Kaori Lytton</li>
+              <li><strong>Nikkei National Museum & Cultural Centre:</strong> Sherri Kajiwara, Carolyn Nakagawa, and Noriko Muraoka</li>
             </ul>
+            <div class="text-center">
+              <a href="http://centre.nikkeiplace.org/" target="_blank"><img src="./Images/General/nikkei.jpg" height="100px" /></a>
+              <a  href="https://www2.gov.bc.ca/gov/content/home" target="_blank"><img src="./Images/General/BCID.png" height="120px"/></a>
+            </div>
           </div>
         </div>
       </div>
