--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -89,9 +89,10 @@
                 <h4>KIMONO KITSUKE</h4>
                 <p>
                     Kitsuke is the art of wearing kimono by knowing which shape, colour, thickness, pattern and design is appropriate for any situation. 
-                    You will need to choose the correct kimono fabric thickness, colour, obi, and pattern based 
-                    on your scene selection.
-                    Learn as you choose - follow the tips to learn how marriage status, season, and formality affect the type 
+                    You will need to choose the correct kimono fabric thickness, colour, obi, and pattern based on your scene selection.
+                </p>
+                <p>
+                    Learn as you choose &#8209; follow the tips to learn how marriage status, season, and formality affect the type 
                     of kimono you should wear. If you make an incorrect choice, read the information bubbles to learn more and try again!
                 </p>
             </div>
