--- a/KimonoApp/index.html
+++ b/KimonoApp/index.html
@@ -20,10 +20,11 @@
     <![endif]-->
   </head>
   <body class="intro-body">
+    <a href="./season.html" width="100%" height="100%">
     <div id="intro-body">
       <img src="./Images/General/Kimono_Play_title_page_mobile.png" style="visibility: hidden; max-width: 100%;"/>
-      <a class="start-btn btn btn-primary" href="season.html">START</a>
     </div>
+    </a>
     <script type="text/javascript">
         localStorage.removeItem("ScenarioValues");
         localStorage.removeItem("ScenarioAlerts");
