* Changed Hai to Atari for correct guesses * Added Mo Ichido for Try Again * Increased wrong choice modal sizes * Changed Gameplay Rules paragraph

--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -83,8 +83,7 @@
             <div class="modal-body">
                 <h4>SELECT YOUR SCENE</h4>
                 <p>
-                    The scene determines the type of kimono that you will wear.
-                    Select your marital status, season, and formality to set the scene.
+                    Kimono traditions correspond to seasons, formality of occasion, and marital status. Select your scene to determine what type of kimono to wear.
                 </p>
                 <h4>KIMONO KITSUKE</h4>
                 <p>
