--- a/KimonoApp/material.html
+++ b/KimonoApp/material.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="modal fade" id="MaterialModal" role="dialog">
-      <div class="modal-dialog modal-sm">
+      <div class="modal-dialog modal-md">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
