--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -102,7 +102,7 @@
       </div>
       </div>
     <div class="modal fade" id="ObiModal" role="dialog">
-      <div class="modal-dialog modal-sm">
+      <div class="modal-dialog modal-md">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
