--- a/KimonoApp/pattern.html
+++ b/KimonoApp/pattern.html
@@ -131,7 +131,7 @@
     </div>
   
   <div class="modal fade" id="PatternModal" role="dialog">
-    <div class="modal-dialog modal-sm">
+    <div class="modal-dialog modal-md">
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
