* Fixed Pattern detail modal non-breaking hyphens * Fixed flickering scenario cards * Changed choice alerts to have Japanese outside of English brackets

--- a/KimonoApp/formality.html
+++ b/KimonoApp/formality.html
@@ -46,11 +46,11 @@
     <div id="formality-container" class="container-fluid">
       <div class="row row-eq-height">
           <div class="col-xs-3 card-holder"></div>
-          <div id="formal-card" class="formality col-xs-3 card" onClick="SetBuilderValue('Formality', 'Formal')">
+          <div id="formal-card" class="formality col-xs-3 card" style="display:none;" onClick="SetBuilderValue('Formality', 'Formal')">
               <img class="scene-icon img-responsive" src="Images/General/formal_icon.png" />
               <p class="text-center scene-label">FORMAL</p>
           </div>
-          <div id="semiformal-card" class="formality col-xs-3 card" onClick="SetBuilderValue('Formality', 'SemiFormal')">
+          <div id="semiformal-card" class="formality col-xs-3 card" style="display:none;" onClick="SetBuilderValue('Formality', 'SemiFormal')">
               <img class="scene-icon img-responsive" src="Images/General/semi_formal_icon.png" />
               <p class="text-center scene-label">SEMI FORMAL</p>
           </div> 
