--- a/KimonoApp/marital.html
+++ b/KimonoApp/marital.html
@@ -46,11 +46,11 @@
     <div id="marital-container" class="container-fluid">
       <div class="row row-eq-height">
         <div class="col-xs-3 card-holder"></div>
-          <div id="married-card" class="marital col-xs-3 card" onClick="SetBuilderValue('Marital', 'Married')">
+          <div id="married-card" class="marital col-xs-3 card" style="display:none;" onClick="SetBuilderValue('Marital', 'Married')">
               <img class="scene-icon img-responsive" src="Images/General/short_sleeve_icon.png" />
               <p class="text-center scene-label">MARRIED</p>
           </div>
-          <div id="unmarried-card" class="marital col-xs-3 card" onClick="SetBuilderValue('Marital', 'Unmarried')">
+          <div id="unmarried-card" class="marital col-xs-3 card" style="display:none;" onClick="SetBuilderValue('Marital', 'Unmarried')">
               <img class="scene-icon img-responsive" src="Images/General/long_sleeve_icon.png" />
               <p class="text-center scene-label">UNMARRIED</p>
           </div>
