--- a/KimonoApp/season.html
+++ b/KimonoApp/season.html
@@ -47,19 +47,19 @@
     <div id="season-container" class="container-fluid">
         <div class="row row-eq-height">
             <div class="col-xs-2 card-holder"></div>
-            <div id="spring-card" class="season col-xs-2 card" onClick="SetBuilderValue('Season', 'Spring')">
+            <div id="spring-card" class="season col-xs-2 card" style="display:none;" onClick="SetBuilderValue('Season', 'Spring')">
                 <img class="scene-icon img-responsive" src="Images/General/spring_icon.png" />
                 <p class="text-center scene-label">SPRING</p>
             </div>
-            <div id="summer-card" class="season col-xs-2 card" onClick="SetBuilderValue('Season', 'Summer')">
+            <div id="summer-card" class="season col-xs-2 card" style="display:none;" onClick="SetBuilderValue('Season', 'Summer')">
                 <img class="scene-icon img-responsive" src="Images/General/summer_icon.png"/>
                 <p class="text-center scene-label">SUMMER</p>
             </div>
-            <div id="autumn-card" class="season col-xs-2 card" onClick="SetBuilderValue('Season', 'Autumn')">
+            <div id="autumn-card" class="season col-xs-2 card" style="display:none;" onClick="SetBuilderValue('Season', 'Autumn')">
                 <img class="scene-icon img-responsive" src="Images/General/autumn_icon.png"/>
                 <p class="text-center scene-label">AUTUMN</p>
             </div>
-            <div id="winter-card" class="season col-xs-2 card" onClick="SetBuilderValue('Season', 'Winter')">
+            <div id="winter-card" class="season col-xs-2 card" style="display:none;" onClick="SetBuilderValue('Season', 'Winter')">
                 <img class="scene-icon img-responsive" src="Images/General/winter_icon.png"/>
                 <p class="text-center scene-label">WINTER</p>
             </div>
