* Changed Tooltip font/style for text to match alert font styling * Changed Tooltips to not have a title (since it's not necessary) * Defaulted expandable pattern/obi pickers to open for mobile screen sizes * Made icons for pattern selection bigger * Changed the pattern image layout from 3 rows of 5 to 4 rows of 3 to facilitate making bigger icons * Increased Material button sizes to the maximum * Added another mobile phone background so material buttons don't extend into the screen doors

--- a/KimonoApp/material.html
+++ b/KimonoApp/material.html
@@ -53,9 +53,9 @@
             <div id="MainRoom" class="col-xs-8 main-room">
                 <h1 class="dressing-room-heading">Material</h1>
                 <div id="material-container">
-                    <button id="Awase" class="btn material" data-toggle="popover" data-trigger="hover" title="Awase" data-content="Kimono sewn with full lining. All areas of the kimono have double-layers.">AWASE</button>
-                    <button id="Hitoe" class="btn material" data-toggle="popover" data-trigger="hover" title="Hitoe" data-content="Kimono sewn without a lining, except for the back lower panel.">HITOE</button>   
-                    <button id="Usumono" class="btn material" data-toggle="popover" data-trigger="hover" title="Usumono" data-content="Kimono sewn with a single layer of thin, light and breezy material. ">USUMONO</button> 
+                    <button id="Awase" class="btn material" data-toggle="popover" data-trigger="hover" data-content="Kimono sewn with full lining. All areas of the kimono have double-layers.">AWASE</button>
+                    <button id="Hitoe" class="btn material" data-toggle="popover" data-trigger="hover" data-content="Kimono sewn without a lining, except for the back lower panel.">HITOE</button>   
+                    <button id="Usumono" class="btn material" data-toggle="popover" data-trigger="hover" data-content="Kimono sewn with a single layer of thin, light and breezy material. ">USUMONO</button> 
                 </div>
                 <canvas id="DressingRoom"></canvas>
             </div>
