--- a/KimonoApp/obi.html
+++ b/KimonoApp/obi.html
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div id="choice-modal" class="container">
-        <div id="Choices" class="collapse">
+        <div id="Choices" class="collapse in">
           <div class="col-xs-12">
               <div class="row">
                   <div class="col-xs-6"><img id="Spring-coll" class="obi img-responsive" src="./Images/General/spring.png"></img></div>
