--- a/KimonoApp/pattern.html
+++ b/KimonoApp/pattern.html
@@ -58,32 +58,33 @@
         </div>
     </div>
     <div id="choice-modal" class="container">
-        <div id="Choices" class="collapse">
+        <div id="Choices" class="collapse in">
           <div id="pattern-container">
               <div class="row">
-                  <div class="col-xs-1"></div>
-                  <img id="AutumnGrass-coll" class="pattern col-xs-2" src="./Images/General/autumngrass_icon.png"></img>
-                  <img id="Bamboo-coll" class="pattern col-xs-2" src="./Images/General/bamboo_icon.png"></img>
-                  <img id="Butterfly-coll" class="pattern col-xs-2" src="./Images/General/butterfly_icon.png"></img>
-                  <img id="Chrysanthemum-coll" class="pattern col-xs-2" src="./Images/General/chrysanthemum_icon.png"></img>
-                  <img id="CraneTurtle-coll" class="pattern col-xs-2" src="./Images/General/craneturtle_icon.png"></img>
+                  <img id="AutumnGrass-coll" class="pattern col-xs-4" src="./Images/General/autumngrass_icon.png"></img>
+                  <img id="Bamboo-coll" class="pattern col-xs-4" src="./Images/General/bamboo_icon.png"></img>
+                  <img id="Butterfly-coll" class="pattern col-xs-4" src="./Images/General/butterfly_icon.png"></img>
               </div>
               <div class="row">
-                  <div class="col-xs-1"></div>
-                  <img id="Iris-coll" class="pattern col-xs-2" src="./Images/General/iris_icon.png"></img>
-                  <img id="Susuki-coll" class="pattern col-xs-2" src="./Images/General/longgrass_icon.png"></img>
-                  <img id="MapleLeaf-coll" class="pattern col-xs-2" src="./Images/General/mapleleaf_icon.png"></img>
-                  <img id="MatsuPlumBamboo-coll" class="pattern col-xs-2" src="./Images/General/matsuplumbamboo_icon.png"></img>
-                  <img id="Peony-coll" class="pattern col-xs-2" src="./Images/General/peony_icon.png"></img>
+                  <img id="Chrysanthemum-coll" class="pattern col-xs-4" src="./Images/General/chrysanthemum_icon.png"></img>
+                  <img id="CraneTurtle-coll" class="pattern col-xs-4" src="./Images/General/craneturtle_icon.png"></img>
+                  <img id="Iris-coll" class="pattern col-xs-4" src="./Images/General/iris_icon.png"></img>
               </div>
               <div class="row">
-                  <div class="col-xs-1"></div>
-                  <img id="Plum-coll" class="pattern col-xs-2" src="./Images/General/plum_icon.png"></img>
-                  <img id="Matsu-coll" class="pattern col-xs-2" src="./Images/General/matsu_icon.png"></img>
-                  <img id="Sakura-coll" class="pattern col-xs-2" src="./Images/General/sakura_icon.png"></img>
-                  <img id="Tsubaki-coll" class="pattern col-xs-2" src="./Images/General/tsubaki_icon.png"></img> 
-                  <img id="GreenMapleLeaf-coll" class="pattern col-xs-2" src="./Images/General/green_maple_leaf_icon.png"></img>
+                  <img id="Susuki-coll" class="pattern col-xs-4" src="./Images/General/longgrass_icon.png"></img>
+                  <img id="MapleLeaf-coll" class="pattern col-xs-4" src="./Images/General/mapleleaf_icon.png"></img>
+                  <img id="MatsuPlumBamboo-coll" class="pattern col-xs-4" src="./Images/General/matsuplumbamboo_icon.png"></img>
               </div>
+              <div class="row">
+                <img id="Peony-coll" class="pattern col-xs-4" src="./Images/General/peony_icon.png"></img>
+                <img id="Plum-coll" class="pattern col-xs-4" src="./Images/General/plum_icon.png"></img>
+                <img id="Matsu-coll" class="pattern col-xs-4" src="./Images/General/matsu_icon.png"></img>
+            </div>
+            <div class="row">
+              <img id="Sakura-coll" class="pattern col-xs-4" src="./Images/General/sakura_icon.png"></img>
+              <img id="Tsubaki-coll" class="pattern col-xs-4" src="./Images/General/tsubaki_icon.png"></img> 
+              <img id="GreenMapleLeaf-coll" class="pattern col-xs-4" src="./Images/General/green_maple_leaf_icon.png"></img>
+          </div>
           </div>
         </div>
       </div>
