* Odd that the image isn't linking properly

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                          <h2 class="title">Latest Projects</h2>
                          <div class="row project">
                           <div class="col-md-4 opac-hover">
-                               <a href="http://kimonoplayapp.nikkeiplace.org/" target="_blank"><img class="img-responsive" src="images/kimonoplayapp.png"></a>
+                               <a href="http://kimonoplayapp.nikkeiplace.org/" target="_blank"><img class="img-responsive" src="./images/kimonoplayapp.png"></a>
                           </div>
                           <div class="col-md-8">
                                <h3 class="project-flush project-name">KimonoPlay App</h3>
