* Fixed link to wrong project

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Steam Page for DesktopDungeons</a>
                                    <li><span class="label label-primary">WebApp</span></li>
                                    <li><span class="label label-primary">React.js</span></li>
                               </ul>
-                              <a href="https://codepen.io/Devbag/pen/pwJLjx" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Codepen</a>                              
+                              <a href="https://codepen.io/Devbag/pen/OgEbPM" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> Check it out on Codepen</a>                              
                          </div> 
                          <div>
                               <h3 class="project-name">OpenDental Business Reporting Module</h3>
