--- a/new-portfolio/index.html
+++ b/new-portfolio/index.html
@@ -16,6 +16,11 @@
             <div class="vertically-centered">
                 <p id="FullName"></p>
                 <p id="JobTitle">Fullstack Developer</p>
+                <ul class="list-inline">
+                    <li class="social-icon list-inline-item"><a href="https://github.com/CZMoodyDev" target="_blank"><i class="fa fa-github"></i></a></li>
+                    <li class="social-icon list-inline-item"><a href="https://www.linkedin.com/in/curtis-zim-moody" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="social-icon list-inline-item"><a href="https://www.freecodecamp.com/czmoodydev" target="_blank"><i class="fa fa-free-code-camp"></i></a></li>
+               </ul>
             </div>
         </div>
 
