* Fixed social icon positioning * Added navigation

--- a/new-portfolio/index.html
+++ b/new-portfolio/index.html
@@ -11,7 +11,22 @@
             <link href="./style/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
-         <!-- Teaser -->
+        <!-- Navigation -->
+        <div class="three-sticks" id="MenuOpener">
+            <span class="fa fa-bars"></span>
+        </div>
+        <div class="fullscreen-menu" id="Menu">
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+
+        <!-- Teaser -->
         <div id="TeaserSection" class="text-center container">
             <div class="vertically-centered">
                 <p id="FullName"></p>
