* Added right and bottom navs

--- a/new-portfolio/index.html
+++ b/new-portfolio/index.html
@@ -15,6 +15,12 @@
         <div class="three-sticks" id="MenuOpener">
             <span class="fa fa-bars"></span>
         </div>
+        <div id="ToAboutMe" class="container">
+            <a id="RightNav" href="#">
+                <p class="vertical-text">About Me</p>
+                <i class="fa fa-chevron-right"></i>
+            </a>
+        </div>
         <div class="fullscreen-menu" id="Menu">
             <nav class="menu">
                 <ul>
@@ -38,8 +44,12 @@
                </ul>
             </div>
         </div>
-
-
+        <div id="ToPortfolio" class="container">
+            <a id="BottomNav" href="#">
+                <p>Portfolio</p>
+                <i class="fa fa-chevron-down"></i>
+            </a>
+        </div>
         <!-- About Me Panel -->
         <!-- Portfolio -->
         <!-- Contact  -->                                   
