--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -3,6 +3,7 @@
     <html>
         <head>
             <meta charset="utf-8"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Curtis Zim Moody</title>
             <link rel="stylesheet" href="./static/css/bootstrap.min.css"/>
             <script src="./static/js/jquery-3.4.0.min.js"></script>
