Non breaking characters

--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -17,9 +17,9 @@
                 <canvas id="splash-canvas"></canvas>
                 <div id="splash-overlay">
                     <h1>
-                        Curtis Zim Moody
+                        Curtis&nbsp;Zim&nbsp;Moody
                     </h1>
-                    <p class="lead text-muted">Full-stack Web Developer </p>
+                    <p class="lead text-muted">Full&#8209;stack&nbsp;Web&nbsp;Developer </p>
                     <p><a class="btn btn-outline-secondary mr-2" href="#about">About my work <i class="fas fa-arrow-right"></i></a></p>
                 </div>
             </section>
