About overview circles added

--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -21,7 +21,7 @@
                     <p><a class="btn btn-outline-secondary mr-2" href="#about">About my work <i class="fas fa-arrow-right"></i></a></p>
                 </div>
             </section>
-            <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar sticky-top navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#splash">Home</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
@@ -35,11 +35,31 @@
             </nav>
             <section id="about" >
                 <div class="container">
-                    <div class="row">
-                        <!-- Block Start -->
-                        <!-- Block End -->
-                        <!-- Block Start -->
-                        <!-- Block End -->
+                    <div class="row text-center pt-5">
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-3x mb-2">
+                                <i class="fas fa-circle fa-stack-2x overview-circle"></i>
+                                <i class="fas fa-drafting-compass fa-stack-1x overview-text fa-inverse"></i>
+                            </span>
+                            <h5>Custom</h5>
+                            <p class="about-blurb lead text-muted">I build products to client specification and turn ideas into reality</p>
+                        </div>
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-3x mb-2">      
+                                <i class="fas fa-circle fa-stack-2x overview-circle"></i>                     
+                                <i class="far fa-lightbulb fa-stack-1x overview-text fa-inverse"></i>
+                            </span>
+                            <h5>Intuitive</h5>
+                            <p class="about-blurb lead text-muted">I focus on design principles to enhance user experience</p>
+                        </div>
+                        <div class="col-md-4">
+                            <span class="fa-stack fa-3x mb-2">
+                                <i class="fas fa-circle fa-stack-2x overview-circle"></i>
+                                <i class="fas fa-mobile-alt fa-stack-1x overview-text fa-inverse"></i>
+                            </span>
+                            <h5>Responsive</h5>
+                            <p class="about-blurb lead text-muted">I believe the ubiquity of mobile phones demands responsiveness</p>
+                        </div>
                     </div>
                     <div class="row">
                         <!-- Block Start -->
