--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -61,16 +61,57 @@
                             <p class="about-blurb lead text-muted">I believe the ubiquity of mobile phones demands responsiveness</p>
                         </div>
                     </div>
+                </div>
+                <div class="container-fluid">
                     <div class="row">
-                        <!-- Block Start -->
-                        <!-- Block End -->
-                        <!-- Block Start -->
-                        <div class="col">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                        <div id="about-me" class="p-3 col-md-5 text-center">
+                            <img class="img-fluid rounded border mb-2" src="./static/img/Portfolio.jpg" />
+                            <div id="me-blurb" class="mb-2">
+                                <h5>About Me</h5>
+                                <p>I enjoy developing for the full stack in the industry and as a hobby. I graduated from UBC with a Bachelor of Computer Science and I've been working in the industry ever since...and loving it!</p>           
                             </div>
                         </div>
-                        <!-- Block End -->
+                        <div id="skills" class="pt-3 col-md-7 container">
+                            <h4 class="mb-1 font-weight-bold">Front End Expertise</h4>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> HTML</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                            </div>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> CSS</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            </div>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> Javascript</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                            </div>    
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> React</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            </div>                   
+                            <h4 class="mb-1 font-weight-bold">Back End Expertise</h4>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> PHP</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                            </div>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> MySQL</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                            </div>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> Python</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                            </div>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> C#</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            </div>  
+                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> Node.js</label>
+                            <div class="progress mb-2">
+                                <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            </div>  
+                        </div>
+
                     </div>
                 </div>
             </section>
