--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -33,8 +33,8 @@
                     </ul>
                 </div>
             </nav>
-            <section id="about" >
-                <div class="container">
+            <section id="about">
+                <div class="container pt-5">
                     <div class="row text-center pt-5">
                         <div class="col-md-4">
                             <span class="fa-stack fa-3x mb-2">
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid">
+                <div class="container-fluid pb-5">
                     <div class="row">
                         <div id="about-me" class="p-3 col-md-5 text-center">
                             <img class="img-fluid rounded border mb-2" src="./static/img/Portfolio.jpg" />
