Changed layout for section

--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -64,14 +64,14 @@
                 </div>
                 <div class="container-fluid pb-5">
                     <div class="row">
-                        <div id="about-me" class="p-3 col-md-5 text-center">
-                            <img class="img-fluid rounded border mb-2" src="./static/img/Portfolio.jpg" />
+                    <div id="about-me" class="col-md-4 text-center">
+                            <img class="img-fluid rounded border mb-2" src="./static/img/Portfolio.jpg">
                             <div id="me-blurb" class="mb-2">
                                 <h5>About Me</h5>
                                 <p>I enjoy developing for the full stack in the industry and as a hobby. I graduated from UBC with a Bachelor of Computer Science and I've been working in the industry ever since...and loving it!</p>           
                             </div>
                         </div>
-                        <div id="skills" class="pt-3 col-md-7 container">
+                        <div id="skills" class="col-md-6 ml-auto container">
                             <h4 class="mb-1 font-weight-bold">Front End Expertise</h4>
                             <label class="col-xs-3 progress-label pr-2"><i class="fas fa-mobile"></i> HTML</label>
                             <div class="progress mb-2">
