--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid pb-5">
+                <div class="container pb-5">
                     <div class="row">
                     <div id="about-me" class="col-md-4 text-center">
                             <img class="img-fluid rounded border mb-2" src="./static/img/Portfolio.jpg">
