--- a/newnewportfolio/index.html
+++ b/newnewportfolio/index.html
@@ -73,24 +73,24 @@
                         </div>
                         <div id="skills" class="col-md-6 ml-auto container">
                             <h4 class="mb-1 font-weight-bold">Front End Expertise</h4>
-                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-html5"></i> HTML</label>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fab fa-html5"></i> HTML</label>
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
                             </div>
-                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-css3-alt"></i> CSS</label>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fab fa-css3-alt"></i> CSS</label>
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                             </div>
-                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-js-square"></i> Javascript</label>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fab fa-js-square"></i> Javascript</label>
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                             </div>    
-                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-react"></i> React</label>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fab fa-react"></i> React</label>
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-winter" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
                             </div>                   
                             <h4 class="mb-1 font-weight-bold">Back End Expertise</h4>
-                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-php"></i> PHP</label>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fab fa-php"></i> PHP</label>
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
                             </div>
@@ -98,7 +98,7 @@
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
                             </div>
-                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-python"></i> Python</label>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fab fa-python"></i> Python</label>
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
                             </div>
@@ -106,7 +106,7 @@
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
                             </div>  
-                            <label class="col-xs-3 progress-label pr-2"><i class="fas fa-node-js"></i> Node.js</label>
+                            <label class="col-xs-3 progress-label pr-2"><i class="fab fa-node-js"></i> Node.js</label>
                             <div class="progress mb-2">
                                 <div class="col-xs-9 progress-bar rounded bar-lavender" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
                             </div>  
